--- a/static-sites-cdn-template.yml
+++ b/static-sites-cdn-template.yml
@@ -33,10 +33,12 @@ Mappings:
       Aliases:
         - test-site-dev.justinlmartin.com
         - peaks-valleys-dev.justinlmartin.com
+        - creative-coding-dev.justinlmartin.com
     prod:
       Aliases:
         - test-site.justinlmartin.com
         - peaks-valleys.justinlmartin.com
+        - creative-coding.justinlmartin.com
   DeploymentBucketMap:
     dev:
       Name: '{{resolve:ssm:Static-Sites-CDN-Deploy-Bucket-Dev:1}}'
@@ -192,6 +194,28 @@ Resources:
             DNSName:
               Fn::GetAtt: StaticSitesCdn.DomainName
             HostedZoneId: Z2FDTNDATAQYW2
+        - Name: !Select
+          - 2
+          - Fn::FindInMap:
+            - AliasMap
+            - !Ref Stage
+            - Aliases
+          Type: A
+          AliasTarget:
+            DNSName:
+              Fn::GetAtt: StaticSitesCdn.DomainName
+            HostedZoneId: Z2FDTNDATAQYW2
+            - Name: !Select
+              - 2
+              - Fn::FindInMap:
+                - AliasMap
+                - !Ref Stage
+                - Aliases
+              Type: AAAA
+              AliasTarget:
+                DNSName:
+                  Fn::GetAtt: StaticSitesCdn.DomainName
+                HostedZoneId: Z2FDTNDATAQYW2
 
 #  OriginRouterLogGroup:
 #    Type: AWS::Logs::LogGroup
