added portfolio to stack

--- a/templates/static-sites-cdn-template.yml
+++ b/templates/static-sites-cdn-template.yml
@@ -128,7 +128,7 @@ Resources:
             - HeaderName: BucketOrigin
               HeaderValue: !Ref StaticSitesBucket
         DefaultCacheBehavior:
-          ViewerProtocolPolicy: allow-all
+          ViewerProtocolPolicy: redirect-to-https
           TargetOriginId: S3Origin
           AllowedMethods:
             - GET
