update to hangman to spaceblobman

--- a/templates/static-sites-cdn-template.yml
+++ b/templates/static-sites-cdn-template.yml
@@ -37,7 +37,7 @@ Mappings:
         - test-site-dev.justinlmartin.com
         - peaks-valleys-dev.justinlmartin.com
         - creative-coding-dev.justinlmartin.com
-        - hangman-dev.justinlmartin.com
+        - spaceblobman-dev.justinlmartin.com
         - sunrise-sunset-dev.justinlmartin.com
         - blackjack-dev.justinlmartin.com
         - portfolio-dev.justinlmartin.com
@@ -47,7 +47,7 @@ Mappings:
         - test-site.justinlmartin.com
         - peaks-valleys.justinlmartin.com
         - creative-coding.justinlmartin.com
-        - hangman.justinlmartin.com
+        - spaceblobman.justinlmartin.com
         - sunrise-sunset.justinlmartin.com
         - blackjack.justinlmartin.com
         - portfolio.justinlmartin.com
