--- a/templates/static-sites-cdn-template.yml
+++ b/templates/static-sites-cdn-template.yml
@@ -29,6 +29,9 @@ Parameters:
   SslCert:
     Type: String
     Default: '{{resolve:ssm:static-sites-cdn-ssl-cert-arn:1}}'
+  HostedZoneId:
+    Type: String
+    Default: '{{resolve:ssm:static-sites-cdn-hosted-zone:1}}'
 
 Mappings:
   AliasMap:
@@ -55,16 +58,16 @@ Mappings:
 #      Make sure these two are always last
         - www.justinlmartin.com
         - justinlmartin.com
-  DeploymentBucketMap:
+  LambdasBucketMap:
     dev:
-      Name: '{{resolve:ssm:Static-Sites-CDN-Deploy-Bucket-Dev:1}}'
+      Name: '{{resolve:ssm:static-sites-cdn-lambdas-dev-bucket:1}}'
     prod:
-      Name: '{{resolve:ssm:Static-Sites-CDN-Deploy-Bucket-Prod:1}}'
-  StaticSitesBucketMap:
+      Name: '{{resolve:ssm:static-sites-cdn-lambdas-prod-bucket:1}}'
+  StaticSitesPipelineDeploymentBucketMap:
     dev:
-      Name: '{{resolve:ssm:Static-Sites-Bucket-Dev:1}}'
+      Name: '{{resolve:ssm:static-sites-pipeline-deployment-dev-bucket:1}}'
     prod:
-      Name: '{{resolve:ssm:Static-Sites-Bucket-Prod:2}}'
+      Name: '{{resolve:ssm:static-sites-pipeline-deployment-prod-bucket:1}}'
   SubdomainSuffixMap:
     dev:
       Suffix: '-dev'
@@ -72,14 +75,71 @@ Mappings:
       Suffix: ''
 
 Resources:
-  StaticSitesCdnDeploymentBucket:
+
+# Roles and Policies
+
+  LambdaRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Sub static-sites-cdn-${Stage}-lambda-role
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+                - edgelambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: static-sites-cdn-lambda-policy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Sid: AllowLogging
+                Effect: Allow
+                Action:
+                  - 'logs:CreateLogStream'
+                  - 'logs:PutLogEvents'
+                  - 'logs:CreateLogGroup'
+                  - 'logs:DescribeLogStreams'
+                Resource:
+                  - 'arn:aws:logs:*:*:*'
+              - Sid: AllowS3Access
+                Effect: Allow
+                Action:
+                  - s3:*
+                Resource:
+                  - !Sub
+                    - arn:aws:s3:::${BucketName}
+                    - BucketName: !FindInMap [ StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name ]
+                  - !Sub
+                    - arn:aws:s3:::${BucketName}/*
+                    - BucketName: !FindInMap [ StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name ]
+      Path: "/"
+
+  PipelineDeployBucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      Bucket: !FindInMap [StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name]
+      PolicyDocument:
+        Statement:
+          - Sid: PipelineDeployBucketAllowRead
+            Action: 's3:GetObject'
+            Effect: Allow
+            Resource: !Sub
+              - arn:aws:s3:::${BucketName}/*
+              - BucketName: !FindInMap [ StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name ]
+            Principal:
+              CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
+
+#  Buckets
+
+  LambdasBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName:
-        Fn::FindInMap:
-          - DeploymentBucketMap
-          - Ref: Stage
-          - Name
+      BucketName: !FindInMap [LambdasBucketMap, !Ref Stage, Name]
       VersioningConfiguration:
         Status: Suspended
       BucketEncryption:
@@ -87,30 +147,13 @@ Resources:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
 
-  StaticSitesBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !FindInMap [StaticSitesBucketMap, !Ref Stage, Name]
-      VersioningConfiguration:
-        Status: Enabled
+# CDN
 
   CloudFrontOriginAccessIdentity:
     Type: 'AWS::CloudFront::CloudFrontOriginAccessIdentity'
     Properties:
       CloudFrontOriginAccessIdentityConfig:
-        Comment: !Ref StaticSitesBucket
-
-  BucketReadPolicy:
-    Type: 'AWS::S3::BucketPolicy'
-    Properties:
-      Bucket: !Ref StaticSitesBucket
-      PolicyDocument:
-        Statement:
-          - Action: 's3:GetObject'
-            Effect: Allow
-            Resource: !Sub 'arn:aws:s3:::${StaticSitesBucket}/*'
-            Principal:
-              CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
+        Comment: !FindInMap [ StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name ]
 
   StaticSitesCdn:
     Type: 'AWS::CloudFront::Distribution'
@@ -128,13 +171,16 @@ Resources:
         Aliases: !FindInMap [ AliasMap, !Ref Stage, Aliases ]
         HttpVersion: http2
         Origins:
-        - DomainName: !GetAtt StaticSitesBucket.DomainName
-          Id: S3Origin
-          S3OriginConfig:
-            OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}
-          OriginCustomHeaders:
-            - HeaderName: BucketOrigin
-              HeaderValue: !Ref StaticSitesBucket
+#        - DomainName: !GetAtt StaticSitesBucket.DomainName
+          - DomainName: !Sub
+            - ${BucketName}.s3.amazonaws.com
+            - BucketName: !FindInMap [ StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name ]
+            Id: S3Origin
+            S3OriginConfig:
+              OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}
+            OriginCustomHeaders:
+              - HeaderName: BucketOrigin
+                HeaderValue: !FindInMap [ StaticSitesPipelineDeploymentBucketMap, !Ref Stage, Name ]
         DefaultCacheBehavior:
           ViewerProtocolPolicy: redirect-to-https
           TargetOriginId: S3Origin
@@ -156,64 +202,53 @@ Resources:
             - EventType: viewer-request
               LambdaFunctionARN: !Ref CustomHeadersLambdaVersion
 
+# DNS Records
+
   StaticSitesDnsRecords:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      HostedZoneName: justinlmartin.com.
+      HostedZoneName: !Sub ${RootDomain}. # The last period is important?
       Comment: DNS records associated with Static Sites CDN
       RecordSets:
         - Name: !Select
           - 0
-          - Fn::FindInMap:
-            - AliasMap
-            - !Ref Stage
-            - Aliases
+          - !FindInMap [ AliasMap, !Ref Stage, Aliases ]
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 0
-          - Fn::FindInMap:
-            - AliasMap
-            - !Ref Stage
-            - Aliases
+          - !FindInMap [ AliasMap, !Ref Stage, Aliases ]
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 1
-          - Fn::FindInMap:
-            - AliasMap
-            - !Ref Stage
-            - Aliases
+          - !FindInMap [ AliasMap, !Ref Stage, Aliases ]
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 1
-          - Fn::FindInMap:
-            - AliasMap
-            - !Ref Stage
-            - Aliases
+          - !FindInMap [ AliasMap, !Ref Stage, Aliases ]
           Type: AAAA
           AliasTarget:
-            DNSName:
-              Fn::GetAtt: StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            DNSName: !GetAtt StaticSitesCdn.DomainName
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 2
+#          Just in case the short version doesnt work
           - Fn::FindInMap:
             - AliasMap
             - !Ref Stage
             - Aliases
           Type: A
           AliasTarget:
-            DNSName:
-              Fn::GetAtt: StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            DNSName: !GetAtt StaticSitesCdn.DomainName
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 2
           - Fn::FindInMap:
@@ -223,7 +258,7 @@ Resources:
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 3
           - Fn::FindInMap:
@@ -233,7 +268,7 @@ Resources:
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 3
           - Fn::FindInMap:
@@ -243,7 +278,7 @@ Resources:
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 4
           - Fn::FindInMap:
@@ -253,7 +288,7 @@ Resources:
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 4
           - Fn::FindInMap:
@@ -263,7 +298,7 @@ Resources:
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 5
           - Fn::FindInMap:
@@ -273,7 +308,7 @@ Resources:
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 5
           - Fn::FindInMap:
@@ -283,7 +318,7 @@ Resources:
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 6
           - Fn::FindInMap:
@@ -293,7 +328,7 @@ Resources:
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 6
           - Fn::FindInMap:
@@ -303,7 +338,7 @@ Resources:
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 7
           - Fn::FindInMap:
@@ -313,7 +348,7 @@ Resources:
           Type: A
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
         - Name: !Select
           - 7
           - Fn::FindInMap:
@@ -323,60 +358,25 @@ Resources:
           Type: AAAA
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
-            HostedZoneId: Z2FDTNDATAQYW2
+            HostedZoneId: !Ref HostedZoneId
 
-  IamRoleLambdaExecution:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-                - edgelambda.amazonaws.com
-            Action:
-              - sts:AssumeRole
-      Policies:
-        - PolicyName: !Sub static-sites-cdn-${Stage}-lambdaPolicy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Sid: AllowLogging
-                Effect: Allow
-                Action:
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                  - logs:CreateLogGroup
-                  - logs:DescribeLogStreams
-                Resource:
-                  - arn:aws:logs:*:*:*
-              - Sid: AllowS3Access
-                Effect: Allow
-                Action:
-                  - s3:*
-                Resource:
-                  - !Sub arn:aws:s3:::${StaticSitesBucket}
-                  - !Sub arn:aws:s3:::${StaticSitesBucket}/*
-      Path: "/"
-      RoleName: !Sub static-sites-cdn-${Stage}-${Region}-lambdaRole
+# Lambdas
 
   OriginRouterLambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        S3Bucket: !Ref StaticSitesCdnDeploymentBucket
-        S3Key: !Sub ${TimeStamp}/lambdas${TimeStamp}.zip
-      FunctionName: !Sub static-sites-origin-router-${Stage}-${TimeStamp}
-      Handler: originRouter.handler
+        S3Bucket: !Ref LambdasBucket
+        S3Key: !Sub ${TimeStamp}/lambdas.zip
+      FunctionName: !Sub static-sites-cdn-origin-router-${Stage}
+      Handler: origin-router-lambda.handler
       MemorySize: 128
-      Role: !GetAtt IamRoleLambdaExecution.Arn
+      Role: !GetAtt LambdaRole.Arn
       Runtime: nodejs12.x
       Timeout: 5
       Description: Routes Cloud Front Requests to S3 Bucket based on subdomain
     DependsOn:
-      - IamRoleLambdaExecution
+      - LambdaRole
 
   OriginRouterLambdaVersion:
     Type: AWS::Lambda::Version
@@ -389,17 +389,17 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        S3Bucket: !Ref StaticSitesCdnDeploymentBucket
-        S3Key: !Sub ${TimeStamp}/lambdas${TimeStamp}.zip
-      FunctionName: !Sub static-sites-custom-headers-${Stage}-${TimeStamp}
-      Handler: customHeaders.handler
+        S3Bucket: !Ref LambdasBucket
+        S3Key: !Sub ${TimeStamp}/lambdas.zip
+      FunctionName: !Sub static-sites-cdn-custom-headers-${Stage}
+      Handler: custom-headers-lambda.handler
       MemorySize: 128
-      Role: !GetAtt IamRoleLambdaExecution.Arn
+      Role: !GetAtt LambdaRole.Arn
       Runtime: nodejs12.x
       Timeout: 5
       Description: Adds original host request as x-forwarded-host
     DependsOn:
-      - IamRoleLambdaExecution
+      - LambdaRole
 
   CustomHeadersLambdaVersion:
     Type: AWS::Lambda::Version
@@ -411,12 +411,8 @@ Resources:
 Outputs:
   LatestTimeStamp:
     Value: !Ref TimeStamp
-  StaticSitesCdnDeploymentBucketName:
-    Value: !Ref StaticSitesCdnDeploymentBucket
-  StaticSitesBucketName:
-    Value: !Ref StaticSitesBucket
-  StaticsSitesBucketUrl:
-    Value: !GetAtt StaticSitesBucket.WebsiteURL
+  LambdasBucketName:
+    Value: !Ref LambdasBucket
   DistributionId:
     Description: 'CloudFront Distribution ID'
     Value: !Ref StaticSitesCdn
@@ -424,14 +420,10 @@ Outputs:
     Description: 'Cloudfront Domain'
     Value: !GetAtt StaticSitesCdn.DomainName
   LambdaRoleArn:
-    Value: !GetAtt IamRoleLambdaExecution.Arn
-  OriginRouterLambdaFunctionName:
-    Value: !Ref OriginRouterLambdaFunction
+    Value: !GetAtt LambdaRole.Arn
   OriginRouterLambdaFunctionQualifiedArn:
     Description: Current Lambda function version
     Value: !Ref OriginRouterLambdaVersion
-  CustomHeadersLambdaFunctionName:
-    Value: !Ref CustomHeadersLambdaFunction
   CustomHeadersLambdaFunctionQualifiedArn:
     Description: Current Lambda function version
     Value: !Ref CustomHeadersLambdaVersion
