--- a/templates/static-sites-cdn-template.yml
+++ b/templates/static-sites-cdn-template.yml
@@ -188,7 +188,7 @@ Resources:
     DependsOn:
       - LambdaRole
 
-  VerisonPublisherLambdaFunction:
+  VersionPublisherLambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       Code:
@@ -210,7 +210,7 @@ Resources:
       Action: 'lambda:PublishVersion'
       FunctionName: !Ref OriginRouterLambdaFunction
       Principal: 'lambda.amazonaws.com'
-      SourceArn: !GetAtt VerisonPublisherLambdaFunction.Arn
+      SourceArn: !GetAtt VersionPublisherLambdaFunction.Arn
     DependsOn:
       - OriginRouterLambdaFunction
 
@@ -220,7 +220,7 @@ Resources:
       Action: 'lambda:PublishVersion'
       FunctionName: !Ref CustomHeadersLambdaFunction
       Principal: 'lambda.amazonaws.com'
-      SourceArn: !GetAtt VerisonPublisherLambdaFunction.Arn
+      SourceArn: !GetAtt VersionPublisherLambdaFunction.Arn
     DependsOn:
       - CustomHeadersLambdaFunction
 
@@ -241,12 +241,15 @@ Resources:
   LambdaVersionRequest:
     Type: 'Custom::LambdaVersionRequest'
     Properties:
-      ServiceToken: !GetAtt VerisonPublisherLambdaFunction.Arn
-      FunctionNames:
-        OriginRouterLambdaFunction: !GetAtt OriginRouterLambdaFunction.Arn
-        CustomHeadersLambdaFunction: !GetAtt CustomHeadersLambdaFunction.Arn
+      ServiceToken: !GetAtt VersionPublisherLambdaFunction.Arn
+      TimeStamp: !Ref TimeStamp
+      FunctionArns:
+        OriginRouterLambda: !GetAtt OriginRouterLambdaFunction.Arn
+        CustomHeadersLambda: !GetAtt CustomHeadersLambdaFunction.Arn
     DependsOn:
-      - VerisonPublisherLambdaFunction
+      - OriginRouterLambdaFunction
+      - CustomHeadersLambdaFunction
+      - VersionPublisherLambdaFunction
 
 # CDN
 
@@ -306,6 +309,8 @@ Resources:
 #              LambdaFunctionARN: !Ref OriginRouterLambdaVersion
 #            - EventType: viewer-request
 #              LambdaFunctionARN: !Ref CustomHeadersLambdaVersion
+    DependsOn:
+      - LambdaVersionRequest
 
 # DNS Records
 
@@ -441,15 +446,12 @@ Outputs:
     Value: !GetAtt StaticSitesCdn.DomainName
   LambdaRoleArn:
     Value: !GetAtt LambdaRole.Arn
-  OriginRequestLambdaQualifiedArn:
+  OriginRouterLambdaQualifiedArn:
     Description: Current Lambda function version
-    Value: !GetAtt LambdaVersionRequest.OriginRequestLambdaQualifiedArn
+    Value: !GetAtt LambdaVersionRequest.OriginRouterLambdaQualifiedArn
   CustomHeadersLambdaQualifiedArn:
     Description: Current Lambda function version
     Value: !GetAtt LambdaVersionRequest.CustomHeadersLambdaQualifiedArn
-#  OriginRouterLambdaFunctionQualifiedArn:
-#    Description: Current Lambda function version
-#    Value: !Ref OriginRouterLambdaVersion
-#  CustomHeadersLambdaFunctionQualifiedArn:
-#    Description: Current Lambda function version
-#    Value: !Ref CustomHeadersLambdaVersion
+  LambdaVersionRequestPhysicalResourceId:
+    Description: Physical Resource ID for latest version publish request
+    Value: !GetAtt LambdaVersionRequest.PhysicalResourceId
